Working on creating all the Views, Models, Collections, and templates

--- a/smrtz/index.html
+++ b/smrtz/index.html
@@ -10,9 +10,52 @@
 
   <link rel="stylesheet" href="css/toast.css?v=0.1">
   <link rel="stylesheet" href="css/base.css?v=0.1">
+
+  <script id="questionTemplate" type="text/template">
+    <div id="question" data-id="{{ id }}">{{ question }}</div>
+    <div id="answers">
+      <div class="true">True</div>
+      <div class="false">False</div>
+    </div>
+    <div class="container">
+      <div id="result">Answer {{ answer }}</div>
+      <div id="next">Next Question</div>
+    </div>
+  </script>
+
+  <script id="resultTemplate" type="text/template">
+    <p>Results:</p>
+    <div id="results">
+      {{# results }}
+        <div class="true">True</div>
+        <div class="false">False</div>
+      {{/ results }}
+    </div>
+    <p>Total: {{ result }} {{ total }}%</p>
+    <div class="container">
+    </div>
+  </script>
+
+  <script id="startTemplate" type="text/template">
+    <div id="start">Start</div>
+    <p>
+      {{# result }}Previous result: {{ result }}{{/ result }}
+      {{^ result }}No previous result{{/ result }}
+    </p>
+  </script>
 </head>
 
 <body>
+  <div class="container grid">
+    <div id="header" class="bar unit span-grid">
+      SMRTZ
+    </div>
+    <div id="body" class="unit span-grid">
+    </div>
+    <div id="footer" class="bar unit span-grid">
+      By: Randy Topliffe
+    </div>
+  </div>
   <script src="js/lib/require.js"></script>
   <script src="js/app.js"></script>
 </body>
