Working on QuestionCollection.sync to fake getting question data from the server

--- a/smrtz/index.html
+++ b/smrtz/index.html
@@ -37,7 +37,7 @@
   </script>
 
   <script id="startTemplate" type="text/template">
-    <div id="start">Start</div>
+    <a href="#" id="start">Start</a>
     <p>
       {{# result }}Previous result: {{ result }}{{/ result }}
       {{^ result }}No previous result{{/ result }}
